fixed cutoff of key image

--- a/code/ui/MainUI.scss
+++ b/code/ui/MainUI.scss
@@ -35,12 +35,12 @@ MainGame{
 
 //main clicky
 .leimage{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     object-fit: contain;
     position: relative;
     margin-left: 30%;
     margin-right: 30%;
-    margin-top: 20%;
+    margin-top: 35%;
     margin-bottom: 30%;
 }
